Fixes for printing
Problems :
- Default font size is way too big for printing, and arguably for slides
too. At least for the kind of slides I use anyway.
- This causes all kinds of layout problems when printing, cropped text
  most of all.
- Printing with Firefox works, uses black on white by default, but the generated PDFs have images
  instead of text for some reason, so not very usable
- Printing with Chrome produces smaller PDFs with text that can be
  copied, so that's good. But printing with no background uses light
  gray on white. Unreadable. And printing with background uses the
  theme. So the solution I found is to use a light theme for slides AND
  syntax highlighting.

Implementation:

- revealer.css defines a small custom font size for printing. Reveal.JS
  config options modified to output a single page for a slide
  - Fixes all printing layout problems, text is smaller and more suited to
    printed text, slides fit on one page and the page number is the
    same as the slide number. Easier to reference when speaking.
- revealer.css also defines a slightly smaller font size for slides in
  general, overriding the themes. That's my personal preference.
- added a highlight-theme query string param
- added --theme and --highlight-theme options to the command line static
  site generator too.
- added more highlight.js themes, notable light ones like idea and
  github. Particularly useful for printing but usable in all situations

--- a/src/Revealer/resources/revealer/revealer.css
+++ b/src/Revealer/resources/revealer/revealer.css
@@ -3,3 +3,12 @@
     background-color: white;
     border-radius: 3px;
 }
+
+.reveal {
+    font-size: 36px;
+}
+
+.reveal-print .reveal {
+    /* override font size for printing */
+    font-size: 20px;
+}
